tour div no longer covers over itemdetail page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,9 @@ body{
 	padding-top: 50px;
   text-align: left;
 }
+#itemDetail{
+  position:relative;
+}
 .leaflet-control-container{
   display:none;
 }
